# Sudoku_Solver

./: .gitignore  CMakeLists.txt  README.md
assignment_examples/: generated_easy.txt  generated_hard.txt  generated_medium.txt  generated_samurai.txt  invalid.txt  multiple.txt  pro.txt  test.txt  unsat.txt
docs/: ARCHITECTURE.md
generated_puzzle/: easy_20260303_183056.txt  easy_20260303_184602.txt  easy_20260303_193101.txt  easy_20260303_193120_332.txt  easy_20260303_193120_340.txt  hard_20260303_182058.txt  medium_20260303_182532.txt
include/: assignment_sudoku.h  sudoku.h
src/: board_state.cpp  board_state.h  generator.cpp  grader.cpp  human_logic.cpp  human_logic.h  main.cpp  puzzle_io.cpp  solver.cpp  solver_core.cpp  solver_core.h  solver_engine.cpp  solver_engine.h  sudoku_io.cpp  sudoku_rules.cpp  sudoku_rules.h  utility.cpp  utility.h
unit_test/: test_solver_suite.cpp
